--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 matplotlib==3.2.1
-tensorflow==2.1.0
+tensorflow
 wandb==0.8.33
 Keras==2.3.1
 pytest==5.4.1
@@ -13,6 +13,7 @@ onnxruntime==1.2.0
 keras2onnx==1.6.1
 pandas
 selenium
+sklearn
 
 #scrapper
 webdriver-manager
