add preprocessing artifact

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 
 /venv
+.idea
 /libs/scrappers/PLOT_IMAGES 2/TEST_DATA/
 /libs/scrappers/PLOT_IMAGES 2/MAT_files/
 /libs/scrappers/PLOT_IMAGES 2/IMAGEOUT/
