--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-ansible==2.4.0.0 #for bash script
-ansible_vault==1.1.2 #for python script
+ansible==2.4.0.0
+ansible_vault==1.1.2
 scikit-learn==1.1.1
-wand==0.12.19
+wand==0.12.11
+torch==1.10.1
